--- a/app/src/main/res/layout/item_driver_details.xml
+++ b/app/src/main/res/layout/item_driver_details.xml
@@ -27,7 +27,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/drawable_round_corner" />
+                android:background="@drawable/ic_no_image" />
 
         </RelativeLayout>
 
