--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/listRecyc"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:textColor="@color/colorBlack"
-        android:layout_marginEnd="@dimen/dp_5" />
+        android:layout_height="400dp"
+        android:fillViewport="true">
+
+        <TextView
+            android:id="@+id/listRecyc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_5"
+            android:textColor="@color/colorBlack" />
+    </ScrollView>
 </LinearLayout>
